--- a/index.html
+++ b/index.html
@@ -4,27 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NEW Факултет по математика и информатика - Начало</title>
+    <title>NEW Факултет по математика и информатика</title>
     <link rel="icon" href="./assets/img/icons/fmi-plovdiv.org.ico" type="image/x-icon">
-    <link rel="stylesheet" href="./assets/css/style.css">
     <!-- Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300&display=swap" rel="stylesheet">
     <!-- End Font  -->
+    <link href="./assets/css/style.css" rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
-    <header>
+    <!-- <header>
         <img src="./assets/img/illustrations/header_bg.png" width="988" height="90" /> 
-    </header>
-    <nav>
+    </header> -->
+    <!-- <nav>
 
         <li class="nav-item active">
-            <a class="nav-link" href="#">Home</a>
-        </li>
-
-        <li class="nav-item active">
-            <a class="nav-link" href="#">FMI</a>
+            <a class="nav-link" href="#">За ФМИ</a>
         </li>
 
         <li class="nav-item active">
@@ -36,15 +33,48 @@
         </li>
 
 
-    </nav>  
+    </nav>  -->
 
 
+    <main class="main" id="top">
+        <!-- Navbar  -->
+        <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#">LOGO</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
 
-    <p><center>is this really it?????hmm</center></p>
+          
+              <div class="collapse navbar-collapse" id="navbarCollapse">
+                <ul class="navbar-nav me-auto mb-2 mb-md-0">
 
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">За ФМИ</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Контакти</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">За студенти</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Кандидатстване</a>
+                  </li>
+               
+                </ul>
+                <form class="d-flex">
+                  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                  <button class="btn btn-outline-success" type="submit">Search</button>
+                </form>
+              </div>
+            </div>
+          </nav>
 
+    </main>
 
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
 
-
-</body>
+    </body>
 </html>
