--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@
                 <li class="nav-item">
                   <a class="nav-link" href="#">Кандидатстване</a>
                 </li>
-             
+        <!-- Navbar End  -->
+
+
               </ul>
               <form class="d-flex">
                 <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
@@ -67,7 +69,7 @@
 
     <main class="main" id="top">
 
-
+      <!-- Carousel Start -->
       <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
             <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -78,8 +80,7 @@
             <div class="carousel-item active">
                 <img class="d-block w-100" src="./assets/img/illustrations/carousel_1.jpg" alt="First slide">
                 <div class="carousel-caption d-none d-md-block">
-                    <h5>My Caption Title (1st Image)</h5>
-                    <p>The whole caption will only show up if the screen is at least medium size.</p>
+                   <!-- Do we need carousel text? -->
                 </div>
             </div>
             <div class="carousel-item">
@@ -98,7 +99,7 @@
             <span class="sr-only">Next</span>
         </a>
     </div>
-    
+    <!-- Carousel End  -->
 
 
 
