--- a/index.html
+++ b/index.html
@@ -56,16 +56,16 @@
           <ul class="navbar-nav me-auto mb-2 mb-md-0">
 
             <li class="nav-item">
-              <a class="nav-link" href="#">За ФМИ</a>
+              <a class="nav-link" href="/about.html">За ФМИ</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Контакти</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Студенти</a>
+              <a class="nav-link" href="/students.html">Студенти</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Кандидатстване</a>
+              <a class="nav-link" href="/admission.html">Кандидатстване</a>
             </li>
           </ul>
           <!-- Navbar End  -->
