started creating student page components

--- a/admission.html
+++ b/admission.html
@@ -1,12 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Кандидатстване</title>
+    <link rel="icon" href="./assets/img/icons/fmi-plovdiv.org.ico" type="image/x-icon">
+    <!-- Styles -->
+    <link href="./assets/css/style.css" rel="stylesheet" />
+    <!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300&display=swap" rel="stylesheet">
 </head>
+
 <body>
-    
+    <header>
+        <!-- Navbar stuff -->
+    </header>
+
+asdfasdfasdf
 </body>
+
 </html>
