--- a/students.html
+++ b/students.html
@@ -1,12 +1,101 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Студенти</title>
+    <link rel="icon" href="./assets/img/icons/fmi-plovdiv.org.ico" type="image/x-icon">
+    <!-- Styles -->
+    <link href="./assets/css/style.css" rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300&display=swap" rel="stylesheet">
 </head>
+
 <body>
-    
+    <header>
+        <!-- Navbar stuff -->
+    </header>
+
+    <div id="schedules-header">
+        <h1 id="schedules-header-title">
+            <span>Учебни разписания</span>
+        </h1>
+    </div>
+    <div id="schedules">
+        <div class="col">
+            <div class="row">
+                <div class="col">Информатика</div>
+                <div class="col btn-group" role="group" aria-label="Basic outlined example">
+                    <button type="button" class="btn btn-outline-primary">1. курс</button>
+                    <button type="button" class="btn btn-outline-primary">2. курс</button>
+                    <button type="button" class="btn btn-outline-primary">3. курс</button>
+                    <button type="button" class="btn btn-outline-primary">4. курс</button>
+                </div>
+                <div class="col"><a href="#">Архив</a></div>
+            </div>
+            <div class="row">
+                <div class="col">Бизнес ИТ</div>
+                <div class="col btn-group" role="group" aria-label="Basic outlined example">
+                    <button type="button" class="btn btn-outline-primary">1. курс</button>
+                    <button type="button" class="btn btn-outline-primary">2. курс</button>
+                    <button type="button" class="btn btn-outline-primary">3. курс</button>
+                    <button type="button" class="btn btn-outline-primary">4. курс</button>
+                </div>
+                <div class="col"><a href="#">Архив</a></div>
+            </div>
+            <div class="row">
+                <div class="col">СТ и дизайн</div>
+                <div class="col btn-group" role="group" aria-label="Basic outlined example">
+                    <button type="button" class="btn btn-outline-primary">1. курс</button>
+                    <button type="button" class="btn btn-outline-primary">2. курс</button>
+                    <button type="button" class="btn btn-outline-primary">3. курс</button>
+                    <button type="button" class="btn btn-outline-primary">4. курс</button>
+                </div>
+                <div class="col"><a href="#">Архив</a></div>
+            </div>
+            <div class="row">
+                <div class="col">Софтуерно инженерство</div>
+                <div class="col btn-group" role="group" aria-label="Basic outlined example">
+                    <button type="button" class="btn btn-outline-primary">1. курс</button>
+                    <button type="button" class="btn btn-outline-primary">2. курс</button>
+                    <button type="button" class="btn btn-outline-primary">3. курс</button>
+                    <button type="button" class="btn btn-outline-primary">4. курс</button>
+                </div>
+                <div class="col"><a href="#">Архив</a></div>
+            </div>
+            <div class="row">
+                <div class="col">Математика</div>
+                <div class="col btn-group" role="group" aria-label="Basic outlined example">
+                    <button type="button" class="btn btn-outline-primary">1. курс</button>
+                    <button type="button" class="btn btn-outline-primary">2. курс</button>
+                    <button type="button" class="btn btn-outline-primary">3. курс</button>
+                    <button type="button" class="btn btn-outline-primary">4. курс</button>
+                </div>
+                <div class="col"><a href="#">Архив</a></div>
+            </div>
+            <div class="row">
+                <div class="col">Приложна математика</div>
+                <div class="col btn-group" role="group" aria-label="Basic outlined example">
+                    <button type="button" class="btn btn-outline-primary">1. курс</button>
+                    <button type="button" class="btn btn-outline-primary">2. курс</button>
+                    <button type="button" class="btn btn-outline-primary">3. курс</button>
+                    <button type="button" class="btn btn-outline-primary">4. курс</button>
+                </div>
+                <div class="col"><a href="#">Архив</a></div>
+            </div>
+        </div>
+    </div>
+
+    <div id="others-header">
+
+    </div>
+    <div id="others">
+
+    </div>
 </body>
+
 </html>
