updated news cards and nav

--- a/index.html
+++ b/index.html
@@ -56,16 +56,16 @@
           <ul class="navbar-nav me-auto mb-2 mb-md-0">
 
             <li class="nav-item">
-              <a class="nav-link" href="/about.html">За ФМИ</a>
+              <a class="nav-link" href="./about.html">За ФМИ</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Контакти</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/students.html">Студенти</a>
+              <a class="nav-link" href="./students.html">Студенти</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/admission.html">Кандидатстване</a>
+              <a class="nav-link" href="./admission.html">Кандидатстване</a>
             </li>
           </ul>
           <!-- Navbar End  -->
@@ -124,41 +124,88 @@
     </div>
     <!-- Carousel End  -->
 
+
+
+
+
+
+
+
+
     <!-- News cards Start -->
 
     <!-- apparently card decks are deprecated -->
-    <div class="row row-cols-1 row-cols-md-2 g-4">
 
-      <div class="col">
-        <div class="card" style="width: 18rem;">
-          <div class="card-body">
-            <div class="row">
-              <div class="col-3">
-                <img src="./assets/img/icons/news.png">
+
+    <!-- <div class="row row-cols-1 row-cols-md-2 g-4"> -->
+
+      <div class="container">
+      <div class="row">
+        <div class="col">
+          <div class="card rounded-0 ">
+            <div class="card-body">
+              <div class="row">
+                  <div class="col-3"><img class="news-icon" src="./assets/img/icons/news.png"></div>
+                  <div class="col-8 p-0"><h5 class="card-title font-weight-bold p-0">Присъствено провеждане на учебните занятия през пролетния триместър</h5></div>
               </div>
-              <!-- padding??? -->
-              <div class="col-8 p-0">
-                <h5 class="card-title font-weight-bold p-0">Присъствено провеждане на учебните занятия през пролетния
-                  триместър</h5>
-              </div>
+              <p class="card-text">Уважаеми студенти,<br>
+                Предвид текущата епидемична обстановка, последната заповед на министъра на образованието и ректора на ПУ,
+                тo занятията през пролетния триместър (редовно и задочно) ще се проведат присъствено...</p>
+              <a href="#" class="card-link float-right">Повече</a>
             </div>
-
-            <p class="card-text">Уважаеми студенти,
-              Предвид текущата епидемична обстановка, последната заповед на министъра на образованието и ректора на ПУ,
-              то
-              занятията през пролетния триместър (редовно и задочно) ще се проведат присъствено...</p>
-            <!-- <p class="card-text">Уважаеми студенти,
-              Предвид текущата епидемична обстановка, последната заповед на министъра на образованието и ректора на ПУ,
-              то
-              занятията през пролетния триместър (редовно и задочно) ще се проведат присъствено според предварително
-              определен график. Следете сайта на факултета за повече информация и график за провеждане на учебните
-              занятия.</p> -->
-            <a href="#" class="card-link">Повече</a>
           </div>
         </div>
-      </div>
+
+        <div class="col">
+          <div class="card rounded-0">
+            <div class="card-body">
+              <div class="row">
+                  <div class="col-3"><img class="news-icon" src="./assets/img/icons/news.png"></div>
+                  <div class="col-8 p-0"><h5 class="card-title font-weight-bold p-0">ПРАКТИКА ПО СПЕЦИАЛНОСТТА - И, СИ, 3 курс, РЕДОВНО ОБ.</h5></div>
+              </div>
+              <p class="card-text">ЗАПИСВАНЕ ЗА ПРАКТИКА ВЪВ ФИРМИ, ОСИГУРЕНИ ОТ ФМИ<br>Всички студенти, които не са намерили фирма за провеждане на практиката, ще бъдат разпределени по фирми, осигурени от ФМИ, като записването ще се осъществи онлайн до 10.02.2022 г. ...</p>
+              <a href="#" class="card-link float-right">Повече</a>
+            </div>
+          </div>
+        </div> 
+
+
+        <div class="col">
+          <div class="card rounded-0">
+            <div class="card-body">
+              <div class="row">
+                  <div class="col-3"><img class="news-icon" src="./assets/img/icons/news.png"></div>
+                  <div class="col-8 p-0"><h5 class="card-title font-weight-bold p-0">Избираеми дисциплини 2021/22, Пролетен триместър, РЕДОВНО ОБУЧЕНИЕ, до 30.03.2022</h5></div>
+              </div>
+              <p class="card-text">
+                Броят на студентите за всяка дисциплина е ограничен.
+                Незаписалите избираема дисциплина студенти не получават заверка за настоящия Пролетен...</p>
+              <a href="#" class="card-link float-right">Повече</a>
+            </div>
+          </div>
+        </div> 
+
+
+        <div class="col">
+          <div class="card rounded-0">
+            <div class="card-body">
+              <div class="row">
+                  <div class="col-3"><img class="news-icon" src="./assets/img/icons/news.png"></div>
+                  <div class="col-8 p-0"><h5 class="card-title font-weight-bold p-0">„Студентски практики – Фаза 2“</h5></div>
+              </div>
+              <p class="card-text">
+                Уважаеми студенти, поради възобновяване на дейностите по проект BG05M2OP001-2.013-0001 „Студентски практики – 
+                Фаза 2“; Ви съобщаваме, че на страницата на проекта http://praktiki.mon.bg/ имате възможност за регистрация, попълване на профил и избор на работодател. За регистрация вижте...</p>
+              <a href="#" class="card-link float-right">Повече</a>
+            </div>
+          </div>
+        </div> 
     </div>
+  </div> 
     <!-- News cards End -->
+
+
+
 
   </main>
 </body>
