changed nav and added new element

--- a/index.html
+++ b/index.html
@@ -124,25 +124,34 @@
     </div>
     <!-- Carousel End  -->
 
+    <!-- Important messages -->
 
+    <div class="container" id="messages">
+      <div class="row">
+        <div class="col">
+          <div class="card rounded-0">
+            <h1>Важни съобщения</h1>
+          </div>
+        </div>
+      </div>
+<div class="row">
+  <p> random shit</p>
+</div>
 
+<div class="row">
+  <p>random shit two</p>
+</div>
 
-
-
+    </div>
+<!-- end important messages  -->
 
 
 
     <!-- News cards Start -->
-
-    <!-- apparently card decks are deprecated -->
-
-
-    <!-- <div class="row row-cols-1 row-cols-md-2 g-4"> -->
-
       <div class="container">
       <div class="row">
         <div class="col">
-          <div class="card rounded-0 ">
+          <div class="card rounded-0">
             <div class="card-body">
               <div class="row">
                   <div class="col-3"><img class="news-icon" src="./assets/img/icons/news.png"></div>
@@ -208,6 +217,9 @@
 
 
   </main>
+
+  <footer>
+  </footer>
 </body>
 
 </html>
