--- a/students.html
+++ b/students.html
@@ -17,9 +17,40 @@
 
 <body>
     <header>
-        <!-- Navbar stuff -->
+        <!-- Navbar  -->
+    <nav class="navbar navbar-expand-md navbar-dark mb-4">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="/"><img src="/assets/img/icons/fmi-logo.png" alt="fmi-logo" id="fmi-logo"></a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
+            aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarCollapse">
+            <ul class="navbar-nav me-auto mb-2 mb-md-0">
+  
+              <li class="nav-item">
+                <a class="nav-link" href="./about.html">За ФМИ</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Контакти</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./students.html">Студенти</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./admission.html">Кандидатстване</a>
+              </li>
+            </ul>
+            <!-- Navbar End  -->
+            <form class="d-flex">
+              <input class="form-control me-2" type="search" placeholder="Търсене..." aria-label="Search">
+              <input type="image" href="#" class="search-icon " src="./assets/img/icons/search-icon.png">
+            </form>
+          </div>
+        </div>
+      </nav>
     </header>
-
+  
     <div id="schedules-header">
         <h1 id="schedules-header-title">
             <span>Учебни разписания</span>
