--- a/admission.html
+++ b/admission.html
@@ -5,20 +5,122 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Кандидатстване</title>
+    <title>NEW Факултет по математика и информатика</title>
     <link rel="icon" href="./assets/img/icons/fmi-plovdiv.org.ico" type="image/x-icon">
-    <!-- Styles -->
-    <link href="./assets/css/style.css" rel="stylesheet" />
-    <!-- Fonts -->
+    <!-- Font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300&display=swap" rel="stylesheet">
+    <!-- End Font  -->
+    <!-- Stylesheets -->
+    <link href="./assets/css/style.css" rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <!-- Scripts -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+      crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+      integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
+      crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+      integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
+      crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+      integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+      crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+      integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+      crossorigin="anonymous"></script>
 </head>
 
 <body>
     <header>
-        <!-- Navbar stuff -->
-    </header>
+        <!-- Navbar  -->
+        <nav class="navbar navbar-expand-md navbar-dark mb-4">
+          <div class="container-fluid">
+            <a class="navbar-brand" href="/"><img src="/assets/img/icons/fmi-logo.png" alt="fmi-logo" id="fmi-logo"></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
+              aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarCollapse">
+              <ul class="navbar-nav me-auto mb-2 mb-md-0">
+    
+                <li class="nav-item">
+                  <a class="nav-link" href="./about.html">За ФМИ</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Контакти</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="./students.html">Студенти</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="./admission.html">Кандидатстване</a>
+                </li>
+              </ul>
+              <!-- Navbar End  -->
+              <form class="d-flex">
+                <input class="form-control me-2" type="search" placeholder="Търсене..." aria-label="Search">
+                <input type="image" href="#" class="search-icon " src="./assets/img/icons/search-icon.png">
+              </form>
+            </div>
+          </div>
+        </nav>
+      </header>
 
-asdfasdfasdf
+<div class="container">
+    <div class="row">
+        <div id="admission-header">
+            <h1 id="admission-header-title">
+                <span>Бакалавърски програми</span>
+            </h1>
+        </div>
+    </div>
+    <div class="row">
+        <div id="admission-header">
+            <h1 id="admission-header-title">
+                <span>Магистърски програми</span>
+            </h1>
+        </div>
+    </div>   
+
+    <div class="row">
+        <div id="admission-header">
+            <h1 id="admission-header-title">
+                <span>Допълнителна информация</span>
+            </h1>
+        </div>
+    </div>
+</div>
+
+
+
+
+
+
+
+  
+
+
+
+
+
+
+
+
+
+
+
+<footer>
+    <div class="text-center p-4">
+        © 2022 Факултет математика и информатика към ПУ "Паисий Хилендарски"
+    </div>
+</footer>
+
 </body>
 
 </html>
