--- a/admission.html
+++ b/admission.html
@@ -13,7 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300&display=swap" rel="stylesheet">
     <!-- End Font  -->
     <!-- Stylesheets -->
-    <link href="./assets/css/style.css" rel="stylesheet" />
+    <link href="assets/css/style.css" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
@@ -70,7 +70,7 @@
             </div>
           </div>
         </nav>
-      </header>
+</header>
 
 <div class="container">
     <div class="row">
@@ -80,14 +80,82 @@
             </h1>
         </div>
     </div>
+</div>
+
+<div class="row">                
+    <div class="col-md-3">
+        <div class="card rounded-0">
+            <div class="card-body">
+            <div class="row">
+                <div class="col"><a href="#" class="card-link"><h5 class="card-title font-weight-bold p-0">Софтуерни технологии и дизайн</h5></a></div>
+            </div>
+            <p class="card-text">Специалността е предимно с приложна насоченост. Тя осигурява базова широкопрофилна подготовка за 
+            прилагане на съвременни софтуерни технологии в различни области на човешката дейност чрез задължителните фундаментални 
+            дисциплини, включени в учебния план. Специалността набляга на уменията за изграждане на дизайн на различни видове...</p>
+            </div>
+        </div>
+    </div>
+    <div class="col-md-3">
+        <div class="card rounded-0">
+            <div class="card-body">
+            <div class="row">
+                <div class="col"><a href="#" class="card-link"><h5 class="card-title font-weight-bold p-0">Бизнес информационни технологии</h5></a></div>
+            </div>
+            <p class="card-text">Специалността акцентира върху ефективното използване и прилагане на информатиката и информационните т
+                ехнологии за подпомагане на бизнес операциите и вземането на решения в софтуерното производство, индустрията и 
+                финансите...</p>
+            </div>
+        </div>
+    </div>
+    <div class="col-md-3">
+        <div class="card rounded-0">
+            <div class="card-body">
+            <div class="row">
+                <div class="col"><a href="#" class="card-link"><h5 class="card-title font-weight-bold p-0">Информатика</h5></a></div>
+            </div>
+            <p class="card-text">Специалността си поставя за цел да акцентира не само върху езиците и технологиите за програмиране, 
+                но и да покаже пътища за анализиране и решаване на разнообразни проблеми във областта софтуерното производство, 
+                компютърната графика, изкуствения интелект, мрежи, разпределени приложения, качество и сигурност на софтуера...</p>
+            </div>
+        </div>
+    </div>
+    <div class="col-md-3">
+        <div class="card rounded-0">
+            <div class="card-body">
+            <div class="row">
+                <div class="col"><a href="#" class="card-link"><h5 class="card-title font-weight-bold p-0">Софтуерно инженерство</h5></a></div>
+            </div>
+            <p class="card-text">Специалността отговаря на тенденциите на развитие и нуждите на софтуерния бизнес и подпомага по-бързата 
+                адаптация и реализация на завършващите специалисти на пазара на труда.Програмата осигурява задълбочена подготовка по 
+                информатика, информационни технологии и софтуерен инженеринг...</p>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="container">
     <div class="row">
         <div id="admission-header">
             <h1 id="admission-header-title">
                 <span>Магистърски програми</span>
             </h1>
         </div>
-    </div>   
+    </div>  
+</div> 
 
+<div class="container">
     <div class="row">
         <div id="admission-header">
             <h1 id="admission-header-title">
