added unstyled about component

--- a/index.html
+++ b/index.html
@@ -141,9 +141,6 @@
         </div>
 </div>
 
-<!-- content: "\f1ea"; -->
-
-
 <div class="row">
         <div class="col-3">
           <div class="card rounded-0 border-top">
@@ -205,31 +202,50 @@
         </div> 
   </div>
 </div>
+</div>
+<!-- News cards End -->
 
-    
-
-
-
-
-  </div>
-
-  
-
-
-
-    <!-- News cards End -->
-
-  </main>
+<!-- About us  -->
 
 
 
 
+<div id="about" class="container d-flex justify-content-center mb-md-0"> 
+  <div class="row">
+   <div class="col">
+
+    <div class="row justify-content-center">
+      <div class="col-md-8 col-lg-8 text-left">
+        <h2>8 Home Projects Perfect Offers</h2>
+        <p>Staying at home for the holidays? Use some of your downtime to tackle a house project or two, and you can
+          start the new year with a fresher, cleaner space. Take the time to work on a project you would never
+          usually have time for (like editing photos from the past year), get a head start on your New Year’s
+          resolutions (by building a healthy pantry) and put away those ornaments and string lights (actually
+          untangled for once). These eight ideas may just motivate you to put down the Christmas cookies. </p>
+      </div>
+    </div>
+
+      <img id="about" src="./assets/img/illustrations/about-us.png">
+    </div>
+</div>
+</div>
 
 
 
 
 
 
+
+
+
+
+
+
+
+
+
+
+</main>
   <footer>
     <div class="text-center p-4">
       © 2022 Факултет математика и информатика към ПУ "Паисий Хилендарски"
