minor index changes

--- a/index.html
+++ b/index.html
@@ -158,8 +158,8 @@
                 </div>
               </div>
               <p class="card-text">Уважаеми студенти,<br>
-                Предвид текущата епидемична обстановка, последната заповед на министъра на образованието и ректора на
-                ПУ...</p>
+                Уважаеми студенти,
+Предвид текущата епидемична обстановка, последната заповед на министъра на образованието и ректора на ПУ...</p>
               <!-- тo занятията през пролетния триместър (редовно и задочно) ще се проведат присъствено... -->
               <a href="#" class="card-link float-right">Повече</a>
             </div>
@@ -178,7 +178,7 @@
               </div>
               <p class="card-text">
                 Броят на студентите за всяка дисциплина е ограничен.
-                Незаписалите избираема дисциплина студенти не получават заверка за настоящия Пролетен...</p>
+                Незаписалите избираема дисциплина студенти не получават заверка за настоящия Пролетен триместър.</p>
               <a href="#" class="card-link float-right">Повече</a>
             </div>
           </div>
@@ -246,6 +246,16 @@
 </div> -->
 
     <div id="pre-footer">
+
+      <div class="container d-flex justify-content-center">
+        <div class="row m-3">
+          <div class="col-4"><img class="news-icon" src="./assets/img/icons/information.png"></div>
+          <div class="col text-center">
+            <h4>За ФМИ</h4>
+          </div>
+        </div>
+      </div>
+
       <img id="main-footer-img" src="assets/img/illustrations/about-us-2.png" />
       <div class="container">
         <div id="main-footer-text">Факултетът по математика и информатика (ФМИ) е първият самостоятелен факултет в над
