--- a/about.html
+++ b/about.html
@@ -8,14 +8,48 @@
     <title>За ФМИ</title>
     <link rel="icon" href="./assets/img/icons/fmi-plovdiv.org.ico" type="image/x-icon">
     <!-- Styles -->
-    <link href="./assets/css/style.css" rel="stylesheet" />
+    <link href="assets/css/style.css" rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <header>
-        <!-- Navbar stuff -->
+        <!-- Navbar  -->
+        <nav class="navbar navbar-expand-md navbar-dark mb-4">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="/"><img src="/assets/img/icons/fmi-logo.png" alt="fmi-logo"
+                        id="fmi-logo"></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
+                    aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarCollapse">
+                    <ul class="navbar-nav me-auto mb-2 mb-md-0">
+
+                        <li class="nav-item">
+                            <a class="nav-link" href="./about.html">За ФМИ</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Контакти</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./students.html">Студенти</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./admission.html">Кандидатстване</a>
+                        </li>
+                    </ul>
+                    <!-- Navbar End  -->
+                    <form class="d-flex">
+                        <input class="form-control me-2" type="search" placeholder="Търсене..." aria-label="Search">
+                        <input type="image" href="#" class="search-icon " src="./assets/img/icons/search-icon.png">
+                    </form>
+                </div>
+            </div>
+        </nav>
     </header>
 
 
