font weight fix

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
         <div class="row m-3">
           <div class="col-4"><img class="news-icon" src="./assets/img/icons/news.png"></div>
           <div class="col text-center">
-            <h4>Новини</h4>
+            <h4 class="font-weight-bold">Новини</h4>
           </div>
         </div>
       </div>
@@ -251,7 +251,7 @@
         <div class="row m-3">
           <div class="col-4"><img class="news-icon" src="./assets/img/icons/information.png"></div>
           <div class="col text-center">
-            <h4>За ФМИ</h4>
+            <h4 class="font-weight-bold">За ФМИ</h4>
           </div>
         </div>
       </div>
