--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
         <!-- Navbar  -->
         <nav class="navbar navbar-expand-md navbar-dark mb-4">
             <div class="container-fluid">
-                <a class="navbar-brand" href="/"><img src="/assets/img/icons/fmi-logo.png" alt="fmi-logo"
+                <a class="navbar-brand" href="./index.html"><img src="./assets/img/icons/fmi-logo.png" alt="fmi-logo"
                         id="fmi-logo"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
                     aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -53,7 +53,7 @@
     </header>
     <div class="container">
 
-        <img id="fmi-img" src="/assets/img/illustrations/fmi.jpg">
+        <img id="fmi-img" src="./assets/img/illustrations/fmi.jpg">
 
         <p id="fmi-txt-about">Факултетът по математика и информатика (ФМИ) е първият самостоятелен факултет в над
             половинвековната история на Пловдивския университет „Паисий Хилендарски“. Днес той е утвърден и
