--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <!-- Navbar  -->
     <nav class="navbar navbar-expand-md navbar-dark mb-4">
       <div class="container-fluid">
-        <a class="navbar-brand" href="/"><img src="/assets/img/icons/fmi-logo.png" alt="fmi-logo" id="fmi-logo"></a>
+        <a class="navbar-brand" href="./index.html"><img src="./assets/img/icons/fmi-logo.png" alt="fmi-logo" id="fmi-logo"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
           aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
